--- a/content/data_types.ipynb
+++ b/content/data_types.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "# Datatypes exercise \n",
-    "Follow the instructions in the following cells. If the test cells run without issues your code is good to go.  "
+    "Complete the code in the cells without the `#TESTS` comment. If the corresponding tests block runs, move on to the next exercise. "
    ],
    "metadata": {
     "collapsed": false
@@ -15,9 +15,8 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Complete the following function \n",
-    "def func(): \n",
-    "    pass"
+    "# Populate the list with five integers\n",
+    "my_list = []"
    ],
    "metadata": {
     "collapsed": true,
@@ -29,11 +28,51 @@
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [],
+   "source": [
+    "# TESTS\n",
+    "assert len(my_list) == 5\n",
+    "assert all([isinstance(x, int) for x in my_list])"
+   ],
    "metadata": {
     "collapsed": false
    },
    "id": "a3391f06e70a65b2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f1f3546706e45076"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Create dictionary with string keys and int values from 1 to 3\n",
+    "my_dict = {}"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ab3c7d41ed645357"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# TESTS\n",
+    "assert len(my_dict) == 3\n",
+    "for val in range(1, 4):\n",
+    "    expected_key = str(val)\n",
+    "    assert expected_key in my_dict\n",
+    "    assert my_dict[expected_key] == val"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "55c00b8e5fecaf45"
   }
  ],
  "metadata": {
