--- a/content/data_types.ipynb
+++ b/content/data_types.ipynb
@@ -2,96 +2,78 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1b1eaf6b58768c53",
+   "metadata": {},
    "source": [
     "# Datatypes exercise \n",
-    "Complete the code in the cells without the `#TESTS` comment. If the corresponding tests block runs, move on to the next exercise. "
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1b1eaf6b58768c53"
+    "The following code snippet doesn't work, try to fix it. Run the cell and the TESTS cell to see if you got it right. "
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "# Populate the list with five integers\n",
-    "my_list = []"
-   ],
-   "metadata": {
-    "collapsed": true,
-    "is_executing": true
-   },
+   "execution_count": null,
    "id": "initial_id",
-   "execution_count": null
+   "metadata": {
+    "is_executing": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Create a quote from Grandpa Simpson in a string \n",
+    "grandpa_quote = [\n",
+    "    \"I used to be with it,\",\n",
+    "    \"but then they changed what it was.\", \n",
+    "    \"Now what I'm with isn't it,\",\n",
+    "    \"and what's it seems weird and scary to me.\",\n",
+    "    \"It will happen to you!\"\n",
+    "]\n",
+    "\n",
+    "# Repeat the last line 3 times with a space added\n",
+    "grandpa_quote[-1] = grandpa_quote[-1] + \" \" ** 3\n",
+    "\n",
+    "# add every other line to a new list\n",
+    "new_quote = {}\n",
+    "for line_number, line in enumerate(grandpa_quote):\n",
+    "    if line_number % 2 == 0:\n",
+    "        new_quote[-1] = line"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a3391f06e70a65b2",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# TESTS\n",
-    "assert len(my_list) == 5\n",
-    "assert all([isinstance(x, int) for x in my_list])"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "a3391f06e70a65b2"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f1f3546706e45076"
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "# Create dictionary with string keys and int values from 1 to 3\n",
-    "my_dict = {}"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ab3c7d41ed645357"
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "# TESTS\n",
-    "assert len(my_dict) == 3\n",
-    "for val in range(1, 4):\n",
-    "    expected_key = str(val)\n",
-    "    assert expected_key in my_dict\n",
-    "    assert my_dict[expected_key] == val"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "55c00b8e5fecaf45"
+    "assert grandpa_quote[-1].count(\"!\") == 3\n",
+    "\n",
+    "assert len(new_quote) == (len(grandpa_quote) // 2 + 1)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
