--- a/content/data_types.ipynb
+++ b/content/data_types.ipynb
@@ -43,17 +43,14 @@
    "execution_count": null,
    "id": "a3391f06e70a65b2",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# TESTS\n",
     "assert grandpa_quote[-1].count(\"!\") == 3\n",
     "\n",
-    "assert len(new_quote) == (len(grandpa_quote) // 2 + 1)\n"
+    "assert len(new_quote) == (len(grandpa_quote) // 2 + 1)"
    ]
   }
  ],
